<resources>
    <string name="app_name">Aparat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="new_videos">new videos</string>
    <string name="special_video">special video</string>
    <string name="best_video">best video</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="views">Views</string>
</resources>