<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_marginTop="@dimen/space_8"
                android:layout_width="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_height="196dp">

            </androidx.viewpager.widget.ViewPager>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_new_video"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_below="@id/view_pager"
                android:layout_margin="@dimen/space_8"
                app:cardCornerRadius="@dimen/space_8">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txv_new_video"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/purple_200"
                    android:gravity="center"
                    android:text="@string/new_videos"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/rel_new_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_new_video">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_new_videos"
                    android:layout_width="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"

                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/progress_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_special_video"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_below="@id/rel_new_video"
                android:layout_margin="@dimen/space_8"
                app:cardCornerRadius="@dimen/space_8">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txv_special_video"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/purple_200"
                    android:gravity="center"
                    android:text="@string/special_video"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/rel_special_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_special_video">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_special_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/progress_special"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_best_video"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_below="@id/rel_special_video"
                android:layout_margin="@dimen/space_8"
                app:cardCornerRadius="@dimen/space_8">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txv_best_video"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/purple_200"
                    android:gravity="center"
                    android:text="@string/best_video"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/rel_best_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_best_video">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_best_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/progress_best"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>